--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,21 +1,39 @@
-<form [formGroup]="user" (ngSubmit)="register()" novalidate>
+<div class="container">
+  <form (ngSubmit)="onUserRegister()" #userForm="ngForm">
 
-  <div>
-    <label>Имя</label>
-    <input type="text" formControlName="name" />
-  </div>
+    <div class="form-group">
+      <label for="name">Имя</label>
+      <input #name='ngModel' type="text" class="form-control" [(ngModel)]="user.name" name="name" id="name" required/>
+      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+        Поле "Имя" обязательно для заполнения
+      </div>
+    </div>
 
-  <div>
-    <label>Логин</label>
-    <input type="text" formControlName="login" />
-  </div>
+    <div class="form-group">
+      <label for="login">Логин</label>
+      <input #login='ngModel' type="text" class="form-control" [(ngModel)]="user.login" name="login" id="login"
+             required/>
+      <div [hidden]="login.valid || login.pristine" class="alert alert-danger">
+        Поле "Логин" обязательно для заполнения
+      </div>
+    </div>
 
-  <div>
-    <label>Пароль</label>
-    <input type="text" formControlName="password" />
-  </div>
+    <div class="form-group">
+      <label for="password">Пароль</label>
+      <input #password='ngModel' type="text" class="form-control" [(ngModel)]="user.password" name="password"
+             id="password" required/>
+      <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+        Поле "Пароль" обязательно для заполнения
+      </div>
+    </div>
 
-  <button type="submit">Зарегистрироваться</button>
+    <br>
 
-</form>
+    <div class="form-buttons">
+      <button type="reset" class="btn btn-light border">Очистить</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!userForm.form.valid">Зарегистрироваться</button>
+    </div>
+
+  </form>
+</div>
 
