--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<!--<router-outlet></router-outlet>-->
-<app-register></app-register>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="#" routerLink="/chats" routerLinkActive="active">Чаты</a>
+        <a class="nav-link" href="#" routerLink="/auth" routerLinkActive="active">Авторизаци</a>
+        <a class="nav-link" href="#" routerLink="/register" routerLinkActive="active">Регистрация</a>
+      </div>
+    </div>
+  </div>
+</nav>
+<router-outlet></router-outlet>
