--- a/src/app/components/chat/test-chat/test-chat.component.html
+++ b/src/app/components/chat/test-chat/test-chat.component.html
@@ -1,5 +1,8 @@
 <p>test-chat works!</p>
 
 
-<input type="text" [(ngModel)]="text">
-<button (click)="submit()">Го</button>
+<!--<input type="text" [(ngModel)]="text">-->
+<button (click)="send()">Го</button>
+
+<br>
+<button (click)="connect()">connect</button>
