--- a/src/app/components/chat/test-chat/chat-field.component.html
+++ b/src/app/components/chat/test-chat/chat-field.component.html
@@ -1,5 +1,3 @@
-<!--<input type="text" [(ngModel)]="text">-->
-<button (click)="send()">Го</button>
 
 <div class="container message-line">
   <div *ngFor="let message of messages">
@@ -9,3 +7,7 @@
   </div>
 </div>
 
+<textare [(ngModel)]="text">
+</textare>
+
+<button (click)="send()">Го</button>
