редирект на чаты, если юзер не авторизован

--- a/src/app/components/chat-application/chat-bar/chat-bar.component.scss
+++ b/src/app/components/chat-application/chat-bar/chat-bar.component.scss
@@ -11,8 +11,13 @@
 
   .channel-list {
     width: 100px;
-    display: flex;
     background-color: #C9C9C9;
+
+    .chat-item {
+      display: flex;
+      justify-content: center;
+    }
+
   }
 
   .chat-list {
