--- a/src/app/components/chat-application/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-application/chat-bar/chat-bar.component.html
@@ -1,6 +1,6 @@
 <div class="sidenav">
   <div class="channel-list">
-    <app-avatar [chatName]="'чат 1'">
+    <app-avatar class="chat-item" [chatName]="'чат 1'">
     </app-avatar>
     <a href="#">About</a>
     <a href="#">Services</a>
