фикс названия компонентов и методов3

--- a/src/app/components/chat-application/chat-form/chat-form.component.html
+++ b/src/app/components/chat-application/chat-form/chat-form.component.html
@@ -6,6 +6,7 @@
   </div>
 </div>
 
-<textare [(ngModel)]="text">
-</textare>
+<textarea [(ngModel)]="message"
+          placeholder="Введите сообщение...">
+</textarea>
 <button (click)="send()">Го</button>
