--- a/src/app/components/common/avatar/avatar.component.scss
+++ b/src/app/components/common/avatar/avatar.component.scss
@@ -1,7 +1,5 @@
 .circle {
   border-radius: 50%;
-  width: 60px;
-  height: 60px;
   background-color: white;
 
   display: flex;
@@ -16,3 +14,14 @@
   }
 
 }
+
+.standard {
+  width: 60px;
+  height: 60px;
+}
+
+.small {
+  width: 44px;
+  height: 44px;
+}
+
