переключение между чатами

--- a/src/app/components/chat-application/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-application/chat-bar/chat-bar.component.html
@@ -12,7 +12,8 @@
 
   <div class="chat-list">
     <app-private-chats *ngIf="chatState === chatTypes.private"
-                       [allChats]="privateChats">
+                       [allChats]="privateChats"
+                       (chatOpen)="onChatOpen($event)">
     </app-private-chats>
   </div>
 
