--- a/src/app/components/chat-application/chat-bar/chat-field/chat-field.component.html
+++ b/src/app/components/chat-application/chat-bar/chat-field/chat-field.component.html
@@ -1,4 +1,4 @@
-<div class="chat-field">
+<div class="chat-field" (click)="onOpenChat()">
   <app-avatar [chatName]="chat.name"
               [avatarSizeState]="'small'">
   </app-avatar>
