--- a/src/app/components/chat-application/chat-bar/private-chats/private-chats.component.html
+++ b/src/app/components/chat-application/chat-bar/private-chats/private-chats.component.html
@@ -1,7 +1,8 @@
 <hr>
 
 <div *ngFor="let chat of allChats">
-  <app-chat-field [setChats]="chat">
+  <app-chat-field [setChats]="chat"
+                  (chatOpen)="onChatOpen($event)">
 
   </app-chat-field>
 </div>
