--- a/src/app/components/chat-application/chat-application.component.html
+++ b/src/app/components/chat-application/chat-application.component.html
@@ -1,8 +1,11 @@
 <app-chat-bar [allChats]="allChats"
-              [privateChats]="privateChats">
-
+              [privateChats]="privateChats"
+              (chatOpen)="onChatOpen($event)"
+               >
 </app-chat-bar>
 
 <div class="chat-form">
-  <app-chat-form></app-chat-form>
+  <app-chat-form [changeChatState]="currentChannelState">
+
+  </app-chat-form>
 </div>
