--- a/src/app/components/authorization/login-form/login-form.component.html
+++ b/src/app/components/authorization/login-form/login-form.component.html
@@ -1,27 +1,28 @@
-<div class="container">
-  <form (ngSubmit)="onUserLogin()" #userForm="ngForm">
+<div class="container h-100">
+  <form (ngSubmit)="onUserLogin()" #userForm="ngForm" class="h-100 d-flex flex-column">
 
-    <div class="form-group">
-      <label for="login">Логин</label>
-      <input #login='ngModel' type="text" class="form-control" [(ngModel)]="user.login" name="login" id="login"
-             required/>
-      <div [hidden]="login.valid || login.pristine" class="alert alert-danger">
-        Поле "Логин" обязательно для заполнения
+    <div class="flex-grow-1">
+      <div class="form-group">
+        <label for="login">Логин</label>
+        <input #login='ngModel' type="text" class="form-control" [(ngModel)]="user.login" name="login" id="login"
+               required/>
+        <div [hidden]="login.valid || login.pristine" class="alert alert-danger">
+          Поле "Логин" обязательно для заполнения
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="password">Пароль</label>
+        <input #password='ngModel' type="password" class="form-control" [(ngModel)]="user.password" name="password"
+               id="password" required/>
+        <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+          Поле "Пароль" обязательно для заполнения
+        </div>
       </div>
     </div>
 
-    <div class="form-group">
-      <label for="password">Пароль</label>
-      <input #password='ngModel' type="password" class="form-control" [(ngModel)]="user.password" name="password"
-             id="password" required/>
-      <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
-        Поле "Пароль" обязательно для заполнения
-      </div>
-    </div>
 
-    <br>
-
-    <div class="form-buttons">
+    <div class="form-buttons mb-5">
       <button type="reset" class="btn btn-light border">Очистить</button>
       <button type="submit" class="btn btn-primary" [disabled]="!userForm.form.valid">Войти</button>
     </div>
