--- a/src/app/components/authorization/register-form/register-form.component.html
+++ b/src/app/components/authorization/register-form/register-form.component.html
@@ -1,35 +1,35 @@
-<div class="container">
-  <form (ngSubmit)="onUserRegister()" #userForm="ngForm">
+<div class="container h-100">
+  <form (ngSubmit)="onUserRegister()" #userForm="ngForm" class="h-100 d-flex flex-column">
 
-    <div class="form-group">
-      <label for="name">Имя</label>
-      <input #name='ngModel' type="text" class="form-control" [(ngModel)]="user.name" name="name" id="name" required/>
-      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-        Поле "Имя" обязательно для заполнения
+    <div class="flex-grow-1">
+      <div class="form-group">
+        <label for="name">Имя</label>
+        <input #name='ngModel' type="text" class="form-control" [(ngModel)]="user.name" name="name" id="name" required/>
+        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+          Поле "Имя" обязательно для заполнения
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="login">Логин</label>
+        <input #login='ngModel' type="text" class="form-control" [(ngModel)]="user.login" name="login" id="login"
+               required/>
+        <div [hidden]="login.valid || login.pristine" class="alert alert-danger">
+          Поле "Логин" обязательно для заполнения
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="password">Пароль</label>
+        <input #password='ngModel' type="text" class="form-control" [(ngModel)]="user.password" name="password"
+               id="password" required/>
+        <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
+          Поле "Пароль" обязательно для заполнения
+        </div>
       </div>
     </div>
 
-    <div class="form-group">
-      <label for="login">Логин</label>
-      <input #login='ngModel' type="text" class="form-control" [(ngModel)]="user.login" name="login" id="login"
-             required/>
-      <div [hidden]="login.valid || login.pristine" class="alert alert-danger">
-        Поле "Логин" обязательно для заполнения
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="password">Пароль</label>
-      <input #password='ngModel' type="text" class="form-control" [(ngModel)]="user.password" name="password"
-             id="password" required/>
-      <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
-        Поле "Пароль" обязательно для заполнения
-      </div>
-    </div>
-
-    <br>
-
-    <div class="form-buttons">
+    <div class="form-buttons mb-5">
       <button type="reset" class="btn btn-light border">Очистить</button>
       <button type="submit" class="btn btn-primary" [disabled]="!userForm.form.valid">Зарегистрироваться</button>
     </div>
