--- a/src/app/components/chat-application/chat-form/chat-form.component.scss
+++ b/src/app/components/chat-application/chat-form/chat-form.component.scss
@@ -1,4 +1,53 @@
-.message-line {
-  display: flex;
-  flex-direction: column
+.chat {
+
+  height: 100vh;
+  background: url("/assets/img/bg-pattern.png") repeat;
+
+  .chat-info {
+    height: 80px;
+    background: white;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    .avatar {
+      border-radius: 50%;
+      overflow: hidden;
+      margin: 10px;
+      min-width: 60px;
+      min-height: 60px;
+      img {
+        width: 60px;
+        height: 60px;
+      }
+    }
+    .chat-name {
+      font-size: 18pt;
+    }
+  }
+
+  .message-line {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y: scroll;
+    min-width: 350px;
+  }
+
+  .message-input {
+    background: white;
+    width: 100%;
+    height: 80px;
+    textarea {
+      padding: 10px;
+      resize: none;
+      flex-grow: 1;
+      border: none;
+      &:focus {
+        outline: none;
+      }
+    }
+    button {
+      border: none;
+      background: none;
+      width: 80px;
+    }
+  }
 }
