--- a/src/app/components/chat-application/chat-form/chat-message/chat-message.component.scss
+++ b/src/app/components/chat-application/chat-form/chat-message/chat-message.component.scss
@@ -1,29 +1,39 @@
 .message {
-  border: 1px solid black;
   border-radius: 10px;
   padding: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  margin-bottom: 20px;
-  width: 50%;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 10px;
+  width: 40%;
+  min-width: 300px;
+  background: white;
 
   .title {
     display: flex;
     justify-content: space-between;
 
     .title-name {
+      width: 200px;
+      height: 20px;
+      overflow: hidden;
+      line-height: 20px;
       color: #1400FF;
-      font-family: Arial;
+      font-family: Arial, serif;
     }
 
     .title-date {
+      width: 110px;
+      height: 20px;
+      overflow: hidden;
+      line-height: 20px;
       color: #00AC07;
-      font-family: Arial;
+      font-family: Arial, serif;
     }
 
   }
 
   .body {
     color: black;
+    word-wrap: anywhere;
   }
 
 }
