--- a/src/app/components/authorization/authorization.component.scss
+++ b/src/app/components/authorization/authorization.component.scss
@@ -1,11 +1,12 @@
 .body {
-  height: 100vh;
-  width: 100vw;
-  background: url("../../../../src/assets/img/bg-pattern.png") repeat;
+  width: 100%;
+  height: 100%;
+  background: url("../../../../src/assets/img/bg-pattern.png");
+  background-repeat: repeat;
 }
 
 .main-form {
-  margin: 100px auto;
+  margin: 25px auto;
   width: 500px;
   height: 650px;
   background-color: white;
