--- a/src/app/components/chat-application/chat-application.component.html
+++ b/src/app/components/chat-application/chat-application.component.html
@@ -5,7 +5,7 @@
 </app-chat-bar>
 
 <div class="chat-form">
-  <app-chat-form [changeChatState]="currentChannelState">
+  <app-chat-form [changeChatState]="currentChatState">
 
   </app-chat-form>
 </div>
