изменил передачу чатов между компонентами

--- a/src/app/components/chat-application/chat-form/chat-form.component.html
+++ b/src/app/components/chat-application/chat-form/chat-form.component.html
@@ -1,5 +1,6 @@
 <div class="chat d-flex flex-column">
 
+  // TODO выводить динамические данные
   <div class="chat-info d-flex align-items-center">
     <div class="avatar"><img src="assets/img/gigachad.jpg" alt=""></div>
     <span class="chat-name">Kamronbek</span>
