--- a/src/app/components/chat-application/chat-form/chat-form.component.scss
+++ b/src/app/components/chat-application/chat-form/chat-form.component.scss
@@ -33,6 +33,7 @@
 
   .message-input {
     background: white;
+    box-shadow: 0 -4px 4px rgba(0, 0, 0, 0.25);
     width: 100%;
     height: 80px;
     textarea {
