--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,4 +1,6 @@
-<h1>404 Not Found</h1>
-<h2>
-  Такая страница не найдена...
-</h2>
+<div class="body d-flex align-items-center">
+  <div class="text">
+      404 Looks like you are lost...
+  </div>
+</div>
+
