Изменил структуру чатов

--- a/src/app/components/chat-application/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-application/chat-bar/chat-bar.component.html
@@ -11,10 +11,10 @@
   </div>
 
   <div class="chat-list">
-    <app-private-chats *ngIf="chatState === chatTypes.private"
-                       [allChats]="privateChats"
+    <app-chat-list *ngIf="chatState === chatTypes.private"
+                       [chats]="chats"
                        (chatOpen)="onChatOpen($event)">
-    </app-private-chats>
+    </app-chat-list>
   </div>
 
 </div>
