--- a/src/app/components/chat-application/chat-application.component.html
+++ b/src/app/components/chat-application/chat-application.component.html
@@ -1,11 +1,10 @@
-<app-chat-bar [allChats]="allChats"
-              [privateChats]="privateChats"
-              (chatOpen)="onChatOpen($event)"
-               >
+<app-chat-bar
+              [chats]="chats"
+              (chatOpen)="onChatOpen($event)">
 </app-chat-bar>
 
 <div class="chat-form">
-  <app-chat-form *ngIf="currentChat" [changeChatState]="currentChat">
+  <app-chat-form *ngIf="currentChat" [changeChat]="currentChat">
 
   </app-chat-form>
 </div>
