--- a/src/app/components/chat-application/chat-form/chat-message/chat-message.component.scss
+++ b/src/app/components/chat-application/chat-form/chat-message/chat-message.component.scss
@@ -3,7 +3,7 @@
   padding: 10px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   margin: 10px;
-  width: 40%;
+  max-width: 45%;
   min-width: 300px;
   background: white;
 
