Добавил переключение между каналами, и изменил компонент аватара

--- a/src/app/components/chat-application/chat-application.component.scss
+++ b/src/app/components/chat-application/chat-application.component.scss
@@ -1,3 +1,10 @@
-.chat-form {
-  margin-left: 400px; /* Same as the width of the sidebar */
+.application {
+  width: 100vw;
+  height: 100vh;
+  .chat-bar {
+
+  }
+  .chat-form {
+    flex-grow: 1;
+  }
 }
