--- a/src/app/components/chat-application/chat-application.component.html
+++ b/src/app/components/chat-application/chat-application.component.html
@@ -1,10 +1,17 @@
-<app-chat-bar
-              [chats]="chats"
-              (chatOpen)="onChatOpen($event)">
-</app-chat-bar>
+<div class="application d-flex flex-row">
+  <div class="chat-bar">
+    <app-chat-bar
+      [chats]="chats"
+      [channels]="channels"
+      (chatOpenEvent)="onChatOpen($event)"
+      (channelOpenEvent)="onChannelOpen($event)"
+    >
+    </app-chat-bar>
+  </div>
 
-<div class="chat-form">
-  <app-chat-form *ngIf="currentChat" [changeChat]="currentChat">
+  <div class="chat-form">
+    <app-chat-form *ngIf="currentChat" [changeChat]="currentChat">
 
-  </app-chat-form>
+    </app-chat-form>
+  </div>
 </div>
