--- a/src/app/components/chat-application/chat-bar/chat-bar.component.scss
+++ b/src/app/components/chat-application/chat-bar/chat-bar.component.scss
@@ -2,7 +2,6 @@
 .sidenav {
   height: 100%; /* Full-height: remove this if you want "auto" height */
   width: 400px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
@@ -14,6 +13,7 @@
     background-color: #C9C9C9;
 
     .chat-item {
+      margin-top: 10px;
       display: flex;
       justify-content: center;
     }
