--- a/src/app/components/chat-application/chat-application.component.html
+++ b/src/app/components/chat-application/chat-application.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="chat-form">
-    <app-chat-form *ngIf="currentChat" [changeChat]="currentChat">
+    <app-chat-form *ngIf="currentChat" [changeChat]="currentChat" [currentChannel]="currentChannel">
 
     </app-chat-form>
   </div>
