--- a/src/app/components/chat-application/chat-bar/chat-list/chat-field/chat-field.component.html
+++ b/src/app/components/chat-application/chat-bar/chat-list/chat-field/chat-field.component.html
@@ -1,6 +1,7 @@
 <div class="chat-field" (click)="onOpenChat()">
   <app-avatar [chatName]="chat.name"
-              [avatarSizeState]="'small'">
+              [avatarSizeState]="'small'"
+              [image]="chat.avatar?.path">
   </app-avatar>
   <div class="chat-name">
     {{ chat.name }}
