--- a/src/app/components/chat-application/chat-form/chat-form.component.scss
+++ b/src/app/components/chat-application/chat-form/chat-form.component.scss
@@ -7,16 +7,9 @@
     height: 80px;
     background: white;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
     .avatar {
-      border-radius: 50%;
-      overflow: hidden;
       margin: 10px;
-      min-width: 60px;
-      min-height: 60px;
-      img {
-        width: 60px;
-        height: 60px;
-      }
     }
     .chat-name {
       font-size: 18pt;
