--- a/src/app/components/common/avatar/avatar.component.scss
+++ b/src/app/components/common/avatar/avatar.component.scss
@@ -2,6 +2,8 @@
   border-radius: 50%;
   background-color: white;
   cursor: pointer;
+  overflow: hidden;
+  border: 1px solid #8B8B8B;
 
   display: flex;
   justify-content: center;
@@ -10,8 +12,11 @@
   div {
     color: black;
     font-weight: bold;
-    font-size: 26px;
+    font-size: 20px;
     text-decoration: none;
+    img {
+      object-fit: cover;
+    }
   }
 
 }
@@ -19,10 +24,22 @@
 .standard {
   width: 60px;
   height: 60px;
+  div {
+    img {
+      width: 60px;
+      height: 60px;
+    }
+  }
 }
 
 .small {
   width: 44px;
   height: 44px;
+  div {
+    img {
+      width: 44px;
+      height: 44px;
+    }
+  }
 }
 
