--- a/src/app/components/chat-application/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-application/chat-bar/chat-bar.component.html
@@ -15,6 +15,7 @@
 
   <div class="chat-list">
     <app-chat-list
+      [currentChannel]="currentChannel"
       [chats]="chats"
       (chatOpen)="onChatOpenEvent($event)">
     </app-chat-list>
