--- a/src/app/components/chat-application/chat-bar/chat-list/chat-list.component.scss
+++ b/src/app/components/chat-application/chat-bar/chat-list/chat-list.component.scss
@@ -1,3 +1,23 @@
+.channel-info {
+  height: 70px;
+  .avatar {
+    margin: 10px;
+  }
+  span {
+    flex-grow: 1;
+    text-align: center;
+    font-size: larger;
+    font-weight: bold;
+  }
+  .channelName {
+    text-align: left;
+  }
+}
+
+hr {
+  margin: 0;
+}
+
 .chat-list {
 
   .selected {
