добавление чатов и стилизация полосы прокрутки

--- a/src/app/components/chat-application/chat-application.component.html
+++ b/src/app/components/chat-application/chat-application.component.html
@@ -5,6 +5,7 @@
       [channels]="channels"
       (chatOpenEvent)="onChatOpen($event)"
       (channelOpenEvent)="onChannelOpen($event)"
+      (addChanelEvent)="onAddChannel($event)"
     >
     </app-chat-bar>
   </div>
