--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -21,7 +21,7 @@
 
 ::-webkit-scrollbar {
   width: 10px;
-  background-color: #f9f9fd;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -30,7 +30,6 @@
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
   border-radius: 10px;
-  background-color: #f9f9fd;
+  background-color: transparent;
 }
