--- a/src/app/components/chat-application/chat-form/chat-message/chat-message.component.scss
+++ b/src/app/components/chat-application/chat-form/chat-message/chat-message.component.scss
@@ -18,6 +18,7 @@
       line-height: 20px;
       color: #1400FF;
       font-family: Arial, serif;
+      text-overflow: ellipsis;
     }
 
     .title-date {
