--- a/src/app/components/chat-application/chat-bar/chat-list/chat-list.component.scss
+++ b/src/app/components/chat-application/chat-bar/chat-list/chat-list.component.scss
@@ -46,13 +46,14 @@
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.25);
 
     button {
-      height: 50%;
+      height: 35px;
       width: 100%;
       border: none;
+      outline: none;
       flex-grow: 1;
     }
 
-    .add-button {
+    .add-chat-button {
       background-color: #43B05C;
       color: white;
       &:active{
