--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,24 +1,67 @@
 <div class="profile">
-  <h1>Личный кабинет</h1>
-  <div class="avatar">
-    <img src="" alt="" class="avatar-img">
-    <h3 class="avatar-username">Kamron Boturkhonov</h3>
+  <div class="modal-header">
+    <h4 class="modal-title" [textContent]="editable ? 'Личный кабинет' : 'О пользователе'"></h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('cross click')"></button>
   </div>
-  <form>
-    <div class="labeled-input">
-      <label>Имя:</label><input type="text" name="name">
-    </div>
-    <div class="labeled-input">
-      <label>Логин:</label><input type="text" name="login">
-    </div>
-    <div class="labeled-input">
-      <label>Пароль:</label><input type="text" name="password">
-    </div>
-    <div class="labeled-input">
-      <label>О себе:</label><input type="text" name="about">
+
+    <div class="modal-body">
+
+      <div class="avatar flex-grow-1 d-flex flex-column justify-content-center align-items-center">
+        <app-avatar
+          [chatName]="user.name"
+          [image]="user.avatar?.path">
+        </app-avatar>
+        <h3 class="avatar-username">{{user.name}}</h3>
+      </div>
+
+      <form>
+
+        <div class="flex-grow-1">
+          <div class="form-group">
+            <label for="userName">Имя</label>
+            <input id="userName" type="text"
+                   name="userName"
+                   [(ngModel)]="user.name"
+                   [disabled] = "!editable"
+                   class="form-control">
+          </div>
+        </div>
+        <div class="flex-grow-1">
+          <div class="form-group">
+            <label for="login">Логин</label>
+            <input id="login" type="text"
+                   name="login"
+                   [(ngModel)]="user.login"
+                   [disabled] = "!editable"
+                   class="form-control">
+          </div>
+        </div>
+        <div class="flex-grow-1" *ngIf="editable">
+          <div class="form-group">
+            <label for="password">Пароль</label>
+            <input id="password" type="password"
+                   name="password"
+                   [(ngModel)]="user.password"
+                   class="form-control">
+          </div>
+        </div>
+
+        <div class="flex-grow-1">
+          <div class="form-group">
+            <label for="about">О себе</label>
+            <textarea id="about" placeholder="Пару слов о себе..."
+                      name="about"
+                      [(ngModel)]="user.about"
+                      [disabled] = "!editable"
+                      class="form-control"></textarea>
+          </div>
+        </div>
+
+      </form>
     </div>
 
-    <input type="button" value="Отменить">
-    <input type="button" value="Сохранить">
-  </form>
+    <div class="modal-footer" *ngIf="editable">
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('save user')">Сохранить</button>
+    </div>
+
 </div>
