--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,13 +1,5 @@
 .profile {
-
-  width: 800px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  h1 {
-    display: inline-block;
+  #about {
+    resize: none;
   }
-
 }
